2008-04-10  Mickael Remond  <mremond@process-one.net>

	*src/ejabberd_c2s.erl: Uniform default value for empty privacy
	list. Fixes (EJAB-603).

2008-04-08  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth_ldap.erl: LDAP function to get the number of
	registered users is too slow (EJAB-331): set timeout in LDAP
	search queries (thanks to Evgeniy Khramtsov) and return the number
	of registered users.

2008-04-07  Mickael Remond  <mremond@process-one.net>

	* doc/guide.tex: Documented the IQ discipline {queue, N}.

2008-04-05  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix default_room_opts with default_room_options
	* doc/guide.html: Likewise

2008-04-04  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth_ldap.erl (get_vh_registered_users_number): New
	function that returns 0 registered users (EJAB-331).

	* src/ejabberd_c2s.erl (process_presence_probe): Don't route a
	presence probe to oneself (EJAB-498)

2008-04-02  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: add condition inclusion of pep in
	disco identity (EJAB-564)

	* src/ejabberd_local.erl: The iq_response table wasn't cloned
	automatically on all nodes which resulted in a single point of
	failure (backport from trunk, thanks to Alexey)

	* src/Makefile.in: Do not ignore values passed from configure
	(thanks to Justin Boffemmyer)(EJAB-592)

2008-03-31  Badlop  <badlop@process-one.net>

	* doc/webadmmain.png: Updated to ejabberd 2.0.0
	* doc/webadmmainru.png: Likewise

	* doc/disco.png: Removed because not used
	
	* doc/guide.tex: Fix Latex reference to webadmin section. Update
	explanation of screenshots. Update xmpp addresses of Mickael
	Remond and Sander Devrieze.
	* doc/guide.html: Likewise

	* doc/Makefile: Remove the Hevea deprecated option -noiso
	* doc/guide.html: Likewise
	* doc/dev.html: Likewise
	* doc/features.html: Likewise

2008-03-27  Badlop  <badlop@process-one.net>
